# gmail-agent

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
app/agent/: __init__.py  builder.py  cli.py
app/core/: __init__.py  config.py
app/mcp/: __init__.py  client.py  filter.py
app/server/: __init__.py
docs/: PRD.md
docs/mcp/: gmail-oauth-setup.md  server-selection.md
docs/superpowers/plans/: 2026-07-13-step4-mcp-tool-binding.md
scripts/: verify_gmail_oauth.py
tests/: test_agent_builder.py  test_agent_cli.py  test_config.py  test_mcp_client.py  test_mcp_filter.py
