[project]
name = "gmail-agent"
version = "0.1.0"
description = "LangGraph 기반 Gmail 읽기·휴지통 이동 챗봇"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
